<resources>
    <string name="app_name">Pathio</string>
    <string name="sloganpt1">DE LA PHOTO</string>
    <string name="sloganpt2">AU SAC À DOS</string>
    <string name="goToTravelShare">Partagez vos souvenirs</string>
    <string name="travelShareSubtitle">Découvrez des milliers de photos de voyages et partagez les vôtres</string>
    <string name="discover">Découvrir</string>
    <string name="goToTravelPath">Visitez vos endroits favoris</string>
    <string name="travelPathSubtitle">Faites vous guider à travers un parcours adapté à vos besoins</string>
    <string name="visit">Visiter</string>
    <string name="customizeTitle">Personnalisez votre parcours</string>
    <string name="multiSelect">SÉLECTION MULTIPLE</string>
    <string name="culture">Culture</string>
    <string name="loisir">Loisirs</string>
    <string name="restauration">Restauration</string>
    <string name="decouverte">Découverte</string>
    <string name="activites">ACTIVITÉS</string>
    <string name="budget">Budget</string>
    <string name="budgetBorneBasse">0€</string>
    <string name="budgetBorneHaute">1000€+</string>
    <string name="duration">Durée</string>
    <string name="journee">Journée</string>
    <string name="demiJournee">Demi journée</string>
    <string name="deuxHeures">2h</string>
    <string name="custom">Custom</string>
    <string name="hrs">hrs</string>
    <string name="effortTitle">EFFORT ET ACCESSIBILITÉ</string>
    <string name="effortPhysique">Effort physique</string>
    <string name="moderateEffort">Modéré</string>
    <string name="highEffort">Élevé</string>
    <string name="smallEffort">Faible</string>
    <string name="specificConstraints">Contraintes spécifiques</string>
    <string name="humiditySens">Sensibilité à l\'humidité</string>
    <string name="heatSens">Sensibilité à la chaleur</string>
    <string name="coldSens">Sensibilité au froid</string>
    <string name="PMAPMRAccess">Accès PMA / PMR</string>
    <string name="childAdapted">Adapté aux enfants</string>
    <string name="oldAdapted">Adapté aux personnes âgées</string>
    <string name="lieuxIncontournables">LIEUX INCONTOURNABLES</string>
    <string name="addMonument">Ajouter un monument, une adresse, etc</string>
    <string name="priorityPlaces">NOUS VEILLERONS À CE QUE CES LIEUX FIGURENT EN PRIORITÉ DANS VOTRE ITINÉRAIRE.</string>
    <string name="generatePath">Générer mon itinéraire</string>
    <string name="personalRequest">Requêtes personnelles</string>
    <string name="selectPath">Sélectionnez votre itinéraire</string>
    <string name="login">Se connecter</string>
    <string name="register">Créer un compte</string>
    <string name="joinPathio">Rejoignez la communauté Pathio</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="email">Adresse e-mail</string>
    <string name="password">Mot de passe</string>
    <string name="confirmPassword">Confirmer le mot de passe</string>
    <string name="accountAlreadyExists">Déjà un compte ? Se connecter</string>
    <string name="usernameEmail">Nom d\'utilisateur / Email</string>
    <string name="createAccount">Pas de compte ? Créer un compte</string>
    <string name="forgottenPassword">Mot de passe oublié ?</string>
    <string name="sendResetLink">Envoyer le lien</string>
    <string name="enterEmailWeWillSendReset">Entrez votre adresse e-mail. Nous vous enverrons un lien pour réinitialiser votre mot de passe.</string>
    <string name="newPost">Nouveau post</string>
    <string name="tapToUpload">Cliquez pour uploader une image</string>
    <string name="change">Changer</string>
    <string name="description">DESCRIPTION</string>
    <string name="aiTags">Tags générés par IA</string>
    <string name="generateAiTags">Générer automatiquement des tags à partir de l\'image</string>
    <string name="audioNotes">Note audio</string>
    <string name="addAudio">Ajouter un audio</string>
    <string name="publish">Publier</string>
    <string name="localisation">LOCALISATION</string>
    <string name="recording">🔴 Enregistrement de votre voix...</string>
    <string name="cancel">Annuler</string>
    <string name="save">Sauvegarder</string>
    <string name="playVoice">Écoutez votre note vocale</string>
    <string name="comments">Commentaires</string>
    <string name="publishComment">Publier un commentaire...</string>
    <string name="myGroups">Mes Groupes</string>
    <string name="create">+ Créer</string>
    <string name="createGroup">Créer le groupe</string>
    <string name="groupName">Nom du groupe</string>
    <string name="newGroup">Nouveau groupe</string>
    <string name="joinGroup">Rejoindre le groupe</string>
    <string name="groupMembers">Membres du groupe</string>
    <string name="posts">Publications</string>
    <string name="myItineraries">Mes itinéraires</string>
</resources>