<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/mountain">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="30dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/mountain">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/pathio_logo"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/name"/>

        <ImageView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/pathio_name"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"/>

        <TextView
            android:id="@+id/sloganpt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sloganpt1"
            android:textSize="22sp"
            android:textAlignment="center"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sloganpt2"/>

        <TextView
            android:id="@+id/sloganpt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sloganpt2"
            android:textSize="22sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toEndOf="@id/sloganpt1"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/travelShareCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="32dp"
            app:cardBackgroundColor="#CCF9F7F5"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/sloganpt2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/pictureIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/outline_photo_24"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/travelShareTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/goToTravelShare"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#1A202C"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@id/pictureIcon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/travelShareDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/travelShareSubtitle"
                    android:textSize="14sp"
                    android:textColor="#4A5568"
                    android:lineSpacingExtra="4dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/travelShareTitle"/>

                <TextView
                    android:id="@+id/travelShareGo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/discover"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#B84B25"
                    android:layout_marginTop="25dp"
                    app:layout_constraintTop_toBottomOf="@id/travelShareDesc"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/goToTravelShare"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/outline_arrow_outward_24"/>

                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/travelPathCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="32dp"
            app:cardBackgroundColor="#CCF9F7F5"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/travelShareCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/globeIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/outline_globe_location_pin_24"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/travelPathTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/goToTravelPath"
                    android:textStyle="bold"
                    android:textColor="#1A202C"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@id/globeIcon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/travelPathDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/travelPathSubtitle"
                    android:textSize="14sp"
                    android:textColor="#4A5568"
                    android:lineSpacingExtra="4dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/travelPathTitle"
                    app:layout_constraintBottom_toTopOf="@id/travelPathGo"/>

                <TextView
                    android:id="@+id/travelPathGo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/visit"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#B84B25"
                    android:layout_marginTop="25dp"
                    app:layout_constraintTop_toBottomOf="@id/travelPathDesc"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/goToTravelPath"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/outline_arrow_outward_24"/>

                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>